Change .properties encoding to UTF-8, add text rebuild

--- a/src/resources/lab3.properties
+++ b/src/resources/lab3.properties
@@ -1,3 +1,4 @@
+rebuilt.text=Rebuilt text:
 sentences.sorted=Sentences sorted by word count ascending:
 text.parsing.result=Text parsing result:
 words.sorted=Words sorted by vowels percent ascending:
